# SolitaireCpp

./: CMakeLists.txt  main.cpp
dataStructures/: Queue.cpp  Queue.h  Stack.cpp  Stack.h
models/: Queue.h  Stack.cpp  Stack.h
node/: DNode.cpp  DNode.h  Node.cpp  Node.h
solitaire/: Card.cpp  Card.h  Game.cpp  Game.h  Referee.cpp  Referee.h
